Added xiong2016 to bib

--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -866,3 +866,21 @@
   year =         "2022",
   URL =          "https://probml.ai",
 }
+
+@InProceedings{xiong2016,
+  author =       "Shuo Xiong and Liang Yang and Nor Azan Mat Zin and
+                 Hiroyuki Iida",
+  booktitle =    "2016 3rd International Conference on Systems and
+                 Informatics {(ICSAI)}",
+  title =        "Mathematical model of ranking accuracy and popularity
+                 promotion",
+  year =         "2016",
+  volume =       "",
+  number =       "",
+  pages =        "350--357",
+  keywords =     "Games;Mathematical model;Art;Probability;Electronic
+                 mail;Information science;Organizations;FIFA ranking
+                 system;Betting Odds;Elo rating system;UEFA Euro 2016",
+  DOI =          "http://dx.doi.org/10.1109/ICSAI.2016.7810980",
+}
+
