bib: Added X11 book

--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -884,3 +884,15 @@
   DOI =          "http://dx.doi.org/10.1109/ICSAI.2016.7810980",
 }
 
+@Book{maloney2017,
+  title =        "Low Level {X} Window Programming An Introduction by
+                 Examples",
+  author =       "Ross J. Maloney",
+  publisher =    "Springer",
+%isbn =      {9783319742496},
+     year =      "2017",
+  series =       "",
+  edition =      "",
+  volume =       "",
+  URL =          "http://gen.lib.rus.ec/book/index.php?md5=b8445f1da5846e29593233ceeb083004",
+}
