bib: added garcia2014

--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -896,3 +896,12 @@
   volume =       "",
   URL =          "http://gen.lib.rus.ec/book/index.php?md5=b8445f1da5846e29593233ceeb083004",
 }
+
+@Book{garcia2014,
+  title =        "Elementos de {\'a}lgebra",
+  author =       "A. Garcia and Y. Lequain",
+%isbn={9788524401909},
+    series =     "Projeto Euclides",
+  year =         "2012",
+  publisher =    "Instituto de Matem{\'a}tica Pura e Aplicada",
+}
