bib: added admb

--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -905,3 +905,18 @@
   year =         "2012",
   publisher =    "Instituto de Matem{\'a}tica Pura e Aplicada",
 }
+
+@Book{autodif2021,
+  title =        "Autodif",
+  author =       "David Fournier",
+  year =         "2021",
+  URL =          "https://github.com/admb-project/admb/releases/download/admb-12.3/autodif-12.3.pdf",
+}
+
+
+@Book{admb2021,
+  title =        "AD Model Builder",
+  author =       "David Fournier",
+  year =         "2021",
+  URL =          "https://github.com/admb-project/admb/releases/download/admb-12.3/admb-12.3.pdf",
+}
