--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -811,7 +811,7 @@
   year =         "2002",
 }
 
-@Book{Golub_2013,
+@Book{golub2013,
   title =        "Matrix Computations",
   DOI =          "http://doi.org/10.56021/9781421407944",
   publisher =    "Johns Hopkins University Press",
@@ -919,4 +919,88 @@
   author =       "David Fournier",
   year =         "2021",
   URL =          "https://github.com/admb-project/admb/releases/download/admb-12.3/admb-12.3.pdf",
+}
+
+@Book{hirsch1976,
+  title =        "Differential Topology",
+  URL =          "https://link.springer.com/book/10.1007/978-1-4684-9449-5",
+  DOI =          "http://doi.org/10.1007/978-1-4684-9449-5",
+  journal =      "Graduate Texts in Mathematics",
+  publisher =    "Springer New York",
+  author =       "Morris W. Hirsch",
+  year =         "1976",
+}
+
+@Book{guillemin2010,
+  title =        "Differential Topology",
+  DOI =          "http://doi.org/10.1090/chel/370",
+  URL =          "https://www.amazon.com/dp/0821851934",
+  publisher =    "American Mathematical Society",
+  author =       "Victor Guillemin and Alan Pollack",
+  year =         "2010",
+  month =        aug,
+}
+
+@Book{golubitsky1973,
+  title =        "Stable Mappings and Their Singularities",
+  author =       "Martin Golubitsky, Victor Guillemin (auth.)",
+  publisher =    "Springer",
+  year =         "1973",
+  series =       "Graduate Texts in Mathematics №14",
+  edition =      "1",
+  URL =          "https://link.springer.com/book/10.1007/978-1-4615-7904-5",
+  DOI =          "https://doi.org/10.1007/978-1-4615-7904-5",
+}
+
+@Book{lages2009_1,
+  title =        "Análise Real (vol 1) (Livro fino) 1",
+  author =       "Elon Lages Lima",
+  publisher =    "IMPA",
+  year =         "2009",
+  series =       "Análise Real 1",
+  edition =      "10th Edition",
+}
+
+@Book{lages2009_2,
+  title =        "Análise Real (vol. 2) (livro fino) 2",
+  author =       "Elon Lages Lima",
+  publisher =    "IMPA",
+  year =         "2009",
+  series =       "Análise Real 2",
+  edition =      "Paperback",
+}
+
+@Book{lages2008_3,
+  title =        "Análise Real (vol. 3) (livro fino) 3",
+  author =       "Elon Lages Lima",
+  publisher =    "IMPA",
+  year =         "2008",
+  series =       "Análise Real 3",
+  edition =      "2nd Edition",
+}
+
+@Book{lages2014,
+  title =        "Curso de Análise Vol. 2",
+  author =       "Elon Lages Lima",
+  publisher =    "IMPA",
+  year =         "2014",
+  series =       "Projeto Euclides",
+}
+
+@Book{alt2016,
+  title =        "Linear Functional Analysis",
+  ISSN =         "2191-6675",
+  DOI =          "https://doi.org/10.1007/978-1-4471-7280-2",
+  journal =      "Universitext",
+  publisher =    "Springer London",
+  author =       "Hans Wilhelm Alt",
+  year =         "2016",
+}
+
+@Article{rynne2008,
+  title =        "Linear functional analysis",
+  DOI =          "http://doi.org/10.1007/978-1-84800-005-6",
+  URL =          "https://link.springer.com/book/10.1007/978-1-84800-005-6",
+  author =       "Bryan P. Rynne and Martin A. Youngson",
+  year =         "2008",
 }
