--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -997,10 +997,83 @@
   year =         "2016",
 }
 
-@Article{rynne2008,
+@Book{rynne2008,
   title =        "Linear functional analysis",
   DOI =          "http://doi.org/10.1007/978-1-84800-005-6",
   URL =          "https://link.springer.com/book/10.1007/978-1-84800-005-6",
   author =       "Bryan P. Rynne and Martin A. Youngson",
   year =         "2008",
+}
+
+@Book{tu2011,
+  title =        "An introduction to manifolds",
+  author =       "Loring Tu",
+  publisher =    "Springer",
+  URL =          "https://link.springer.com/book/10.1007/978-1-4419-7400-6",
+  DOI =          "http://doi.org/10.1007/978-1-4419-7400-6",
+  year =         "2011",
+}
+
+
+@Book{lee2009,
+  title =        "Manifolds and Differential Geometry",
+  author =       "Jeffrey M. Lee",
+  publisher =    "American Mathematical Society",
+  year =         "2009",
+  series =       "Graduate Studies in Mathematics",
+  URL =          "https://bookstore.ams.org/gsm-107",
+}
+
+@Book{lamport1994,
+  title =        "{LaTeX}: a document-preparation system",
+  author =       "Leslie Lamport",
+  publisher =    "Addison-Wesley Professional",
+  year =         "1994",
+  edition =      "2",
+  URL =          "https://www.amazon.com/dp/0201529831",
+}
+
+@Book{lee2011,
+  title =        "Introduction to Topological Manifolds",
+  author =       "John M. Lee",
+  publisher =    "Springer",
+  year =         "2011",
+  series =       "Graduate Texts in Mathematics 202",
+  edition =      "2",
+}
+
+@Book{lee2012,
+  title =        "Introduction to Smooth Manifolds",
+  author =       "John M. Lee",
+  publisher =    "Springer",
+  year =         "2012",
+  series =       "Graduate Texts in Mathematics 218",
+  edition =      "2",
+}
+
+@Book{spivak1999,
+  title =        "A Comprehensive Introduction to Differential
+                 Geometry",
+  author =       "Michael Spivak",
+  publisher =    "Publish or Perish",
+  year =         "1999",
+  edition =      "3",
+  volume =       "1",
+}
+
+@Book{vershynin2018,
+  title =        "High-Dimensional Probability: An Introduction with
+                 Applications in Data Science",
+  author =       "Roman Vershynin",
+  publisher =    "Publish or Perish",
+  year =         "2018",
+  edition =      "1",
+  URL =          "https://www.cambridge.org/gb/universitypress/subjects/statistics-probability/probability-theory-and-stochastic-processes/high-dimensional-probability-introduction-applications-data-science",
+}
+
+@Book{lages2014al,
+  title =        "Algebra Linear",
+  author =       "Elon Lages Lima",
+  publisher =    "IMPA",
+  year =         "2014",
 }
