--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -639,7 +639,7 @@
   author =       "Geoffrey Grimmett",
   publisher =    "Springer-Verlag Berlin Heidelberg",
 %ISBN =         "9783-540-6490-2-1,3-540-64902-6",
-    year =       "1999",
+        year =   "1999",
   series =       "Grundlehren der mathematischen Wissenschaften 321",
   edition =      "2",
   URL =          "https://link.springer.com/book/10.1007/978-3-662-03981-6",
@@ -798,7 +798,7 @@
 @Book{stoer2002,
   title =        "Introduction to Numerical Analysis",
 %ISBN =         "9781-475-7559-2-3",
-      DOI =      "http://doi.org/10.1007/978-1-4757-5592-3",
+          DOI =  "http://doi.org/10.1007/978-1-4757-5592-3",
   publisher =    "Springer New York",
   author =       "J. Stoer and R. Bulirsch",
   year =         "2002",
@@ -824,7 +824,7 @@
   author =       "David Bausum",
   publisher =    "Springer US",
 %isbn =      {978-0-7923-7673-6,978-1-4615-0941-7},
-       year =    "2002",
+           year = "2002",
   edition =      "1",
   DOI =          "http://dx.doi.org/10.1007/978-1-4615-0941-7",
 }
@@ -834,7 +834,7 @@
   author =       "Brian P. Hogan",
   publisher =    "Pragmatic Bookshelf",
 %isbn =      {9781680502213},
-     year =      "2016",
+         year =  "2016",
   edition =      "1",
   URL =          "https://pragprog.com/titles/bhtmux2/tmux-2/",
 }
@@ -890,7 +890,7 @@
   author =       "Ross J. Maloney",
   publisher =    "Springer",
 %isbn =      {9783319742496},
-     year =      "2017",
+         year =  "2017",
   series =       "",
   edition =      "",
   volume =       "",
@@ -901,7 +901,7 @@
   title =        "Elementos de {\'a}lgebra",
   author =       "A. Garcia and Y. Lequain",
 %isbn={9788524401909},
-    series =     "Projeto Euclides",
+        series = "Projeto Euclides",
   year =         "2012",
   publisher =    "Instituto de Matem{\'a}tica Pura e Aplicada",
 }
@@ -913,9 +913,8 @@
   URL =          "https://github.com/admb-project/admb/releases/download/admb-12.3/autodif-12.3.pdf",
 }
 
-
 @Book{admb2021,
-  title =        "AD Model Builder",
+  title =        "{AD} Model Builder",
   author =       "David Fournier",
   year =         "2021",
   URL =          "https://github.com/admb-project/admb/releases/download/admb-12.3/admb-12.3.pdf",
@@ -1014,7 +1013,6 @@
   year =         "2011",
 }
 
-
 @Book{lee2009,
   title =        "Manifolds and Differential Geometry",
   author =       "Jeffrey M. Lee",
@@ -1076,4 +1074,95 @@
   author =       "Elon Lages Lima",
   publisher =    "IMPA",
   year =         "2014",
+}
+
+@Book{rudin1991,
+  title =        "Functional Analysis",
+  author =       "Walter Rudin",
+  publisher =    "McGraw-Hill",
+  year =         "1991",
+  edition =      "2",
+}
+
+@Book{reed1981,
+  title =        "Methods of mathematical physics: Functional analysis",
+  author =       "Michael Reed and Barry Simon",
+  publisher =    "Academic Press",
+  year =         "1981",
+  volume =       "Vol 1.",
+}
+
+@Book{yosida1995,
+  title =        "Functional analysis",
+  author =       "Kosaku Yosida",
+  publisher =    "Springer-Verlag",
+  year =         "1995",
+  series =       "Springer Classics in Mathematics",
+  edition =      "6th",
+}
+
+@Book{brezis2010,
+  title =        "Functional analysis, Sobolev spaces and partial
+                 differential equations",
+  author =       "Haim Brezis",
+  publisher =    "Springer-Verlag New York",
+  year =         "2010",
+  series =       "Universitext",
+  edition =      "1",
+}
+
+@Book{krishnapur2021,
+  title =        "Gaussian processes",
+  author =       "Manjuanath Krishnapur",
+  year =         "2021",
+  URL =          "https://math.iisc.ac.in/~manju/GP20/GP20.pdf",
+}
+
+@Book{lax2002,
+  title =        "Functional analysis",
+  author =       "Peter David Lax",
+  publisher =    "Wiley-Interscience",
+  year =         "2002",
+  series =       "Pure and Applied Mathematics: A Wiley Series of Texts,
+                 Monographs and Tracts",
+  URL =          "https://www.wiley.com/en-us/Functional+Analysis-p-9781118626740",
+}
+
+@Book{zeidler1995,
+  title =        "Applied Functional Analysis: Main Principles and Their
+                 Applications",
+  author =       "Eberhard Zeidler",
+  publisher =    "Springer-Verlag New York",
+  year =         "1995",
+  series =       "Applied Mathematical Sciences 109",
+  edition =      "1",
+  URL =          "https://link.springer.com/book/10.1007/978-1-4612-0821-1",
+}
+
+@Book{bachman1966,
+  title =        "Functional analysis",
+  author =       "George Bachman and Lawrence Narici",
+  publisher =    "Academic Press",
+  year =         "1966",
+  URL =          "https://store.doverpublications.com/products/9780486402512?srsltid=AfmBOopjeb-Vcx1NglR8LwIw5QyCsRzZVevqxCiPztRUqcj1CZXTWhwD",
+}
+
+@Book{eidelman2004,
+  title =        "Functional analysis",
+  author =       "Yuli Eidelman and Vitali Milman and Antonis
+                 Tsolomitis",
+  publisher =    "AMS",
+  year =         "2004",
+  series =       "Graduate Studies in Mathematics 066",
+  URL =          "https://bookstore.ams.org/view?ProductCode=GSM/66",
+}
+
+@Book{maccluer2009,
+  title =        "Elementary functional analysis",
+  author =       "Barbara MacCluer",
+  publisher =    "Springer-Verlag New York",
+  year =         "2009",
+  series =       "Graduate Texts in Mathematics 253",
+  edition =      "1",
+  URL =          "https://link.springer.com/book/10.1007/978-0-387-85529-5",
 }
