--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -1128,7 +1128,7 @@
   URL =          "https://www.wiley.com/en-us/Functional+Analysis-p-9781118626740",
 }
 
-@Book{zeidler1995,
+@Book{zeidler1995109,
   title =        "Applied Functional Analysis: Main Principles and Their
                  Applications",
   author =       "Eberhard Zeidler",
@@ -1165,4 +1165,13 @@
   series =       "Graduate Texts in Mathematics 253",
   edition =      "1",
   URL =          "https://link.springer.com/book/10.1007/978-0-387-85529-5",
+}
+
+@book{zeidler1995108,
+   title =     {Applied functional analysis: applications to mathematical physics},
+   author =    {Eberhard Zeidler},
+   publisher = {Springer},
+   year =      {1995},
+   series =    {Applied Mathematical Sciences 108},
+   url =       {https://link.springer.com/book/10.1007/978-1-4612-0815-0}
 }
