bib: updated references

--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -1175,3 +1175,199 @@
    series =    {Applied Mathematical Sciences 108},
    url =       {https://link.springer.com/book/10.1007/978-1-4612-0815-0}
 }
+
+@Book{bartle2011ira,
+  title =        "Introduction to Real Analysis",
+  author =       "Donald R. Sherbert Robert G. Bartle",
+  publisher =    "Wiley",
+  year =         "2011",
+  edition =      "4",
+  URL =          "https://www.wiley.com/en-us/Introduction+to+Real+Analysis%2C+4th+Edition-p-9781119496786",
+}
+
+@Book{bartle2001,
+  title =        "A modern theory of integration",
+  author =       "Robert Gardner Bartle",
+  publisher =    "American Mathematical Society",
+  year =         "2001",
+  series =       "Graduate studies in mathematics 32",
+  URL =          "https://bookstore.ams.org/gsm-32",
+}
+
+@Book{bartle2011eilm,
+  title =        "The Elements of Integration and Lebesgue Measure",
+  author =       "Robert Gardner Bartle",
+  publisher =    "John Wiley \& Sons",
+  year =         "2011",
+  URL =          "https://www.wiley.com/en-us/The+Elements+of+Integration+and+Lebesgue+Measure-p-9781118626122",
+}
+
+@Book{conway2007,
+  title =        "A Course in Functional Analysis",
+  author =       "John Bligh Conway",
+  publisher =    "Springer New York, NY",
+  year =         "2007",
+  edition =      "2",
+  URL =          "https://link.springer.com/book/10.1007/978-1-4757-4383-8",
+}
+
+@book{taylor1980,
+   title =     {Introduction to functional analysis},
+   author =    {Angus Ellis Taylor and David C. Lay},
+   publisher = {Krieger Publishing Company},
+   year =      {1980},
+   edition =   {2nd ed., reprint ed},
+   url =       {https://www.amazon.com/dp/0898749514}
+}
+
+@Book{oliveira2014,
+  title =        "Introdução à análise funcional",
+  author =       "César Oliveira",
+  publisher =    "IMPA",
+  year =         "2014",
+  series =       "Projeto Euclides",
+  edition =      "1",
+  URL =          "https://impa.br/page-livros/introducao-a-analise-funcional/",
+}
+
+@book{dunford19881,
+   title =     {Linear Operators, Part I: General Theory},
+   author =    {Nelson James Dunford, Jacob Theodore Schwartz},
+   publisher = {Wiley - Interscience Publishers},
+   year =      {1988},
+   volume =    {Part 1},
+   url =       {https://www.wiley.com/en-us/Linear+Operators%2C+Part+1%3A+General+Theory-p-9780471608486}
+}
+
+@book{dunford19882,
+   title =     {Linear Operators, Part 2: Spectral Theory, Self Adjoint Operators in Hilbert Space},
+   author =    {Nelson James Dunford, Jacob Theodore Schwartz, William G. Bade, Robert Gardner Bartle},
+   publisher = {Wiley - Interscience Publishers},
+   year =      {1988},
+   volume =    {Part 2},
+   url =       {https://www.wiley.com/en-us/Linear+Operators%2C+Part+2%3A+Spectral+Theory%2C+Self+Adjoint+Operators+in+Hilbert+Space-p-9780471608479}
+}
+
+@book{dunford19883,
+   title =     {Linear operators},
+   author =    {Nelson James Dunford, Jacob Theodore Schwartz, William G. Bade, Robert Gardner Bartle},
+   publisher = {Wiley - Interscience Publishers},
+   year =      {1988},
+   volume =    {Part 3},
+   url =       {https://www.wiley.com/en-us/Linear+Operators%2C+Part+3%3A+Spectral+Operators-p-9780471608462}
+}
+
+@Book{bourbaki1953,
+  title =        "Topological vector spaces",
+  author =       "Nicolas Bourbaki",
+  publisher =    "Springer",
+  year =         "1953",
+  series =       "Elements of Mathematics",
+  volume =       "Chapter 1-5",
+  URL =          "https://link.springer.com/book/10.1007/978-3-642-61715-7",
+}
+
+@Article{talagrand1996,
+  ISSN =         "00911798, 2168894X",
+  URL =          "http://www.jstor.org/stable/2244967",
+  abstract =     "Majorizing measures provided bounds for the supremum
+                 of stochastic processes. They represent the most
+                 general possible form of the chaining argument going
+                 back to Kolmogorov. Majorizing measures arose from the
+                 theory of Gaussian processes, but they now have
+                 applications far beyond the setting. The fundamental
+                 question is the construction of these measures. This
+                 paper focuses on the tools that have been developed for
+                 this purpose and, in particular, the use of geometric
+                 ideas. Applications are given to several natural
+                 problems where entropy methods are powerless.",
+  author =       "Michel Talagrand",
+  journal =      "The Annals of Probability",
+  number =       "3",
+  pages =        "1049--1103",
+  publisher =    "Institute of Mathematical Statistics",
+  title =        "Majorizing Measures: The Generic Chaining",
+  urldate =      "2025-02-11",
+  volume =       "24",
+  year =         "1996",
+}
+
+@Article{talagrand1987,
+  author =       "Michel Talagrand",
+  journal =      "Acta Mathematica",
+  pages =        "1871--2509",
+  title =        "Regularity of gaussian processes",
+  year =         "1987",
+  DOI =          "https://doi.org/10.1007/BF02392556",
+}
+
+@Book{talagrand2014,
+  title =        "Upper and Lower Bounds for Stochastic Processes:
+                 Modern Methods and Classical Problems",
+  author =       "Michel Talagrand",
+  publisher =    "Springer",
+  year =         "2014",
+  series =       "A Series of Modern Surveys in Mathematics",
+  URL =          "https://link.springer.com/book/10.1007/978-3-642-54075-2",
+}
+
+@Book{dudley2002,
+  title =        "Real Analysis and Probability",
+  author =       "Richard Mansfield Dudley",
+  publisher =    "Cambridge University Press",
+  year =         "2002",
+  series =       "Cambridge Studies in Advanced Mathematics 74",
+  edition =      "1",
+  URL =          "https://www.cambridge.org/core/books/real-analysis-and-probability/26DDF2D09E526185F2347AA5658B96F6",
+}
+
+@Book{boucheron2013,
+  title =        "Concentration inequalities. A nonasymptotic theory of
+                 independence",
+  author =       "Pascal {Boucheron, Stéphane; Lugosi, Gábor;
+                 Massart}",
+  publisher =    "Oxford University Press",
+  year =         "2013",
+  URL =          "https://academic.oup.com/book/26549",
+}
+
+@Book{matousek2002,
+  title =        "Lectures on discrete geometry (some chapters)",
+  author =       "Matousek J.",
+  year =         "2002",
+  URL =          "https://link.springer.com/book/10.1007/978-1-4613-0039-7",
+}
+
+@Book{ledoux2001,
+  title =        "The Concentration of Measure Phenomenon",
+  author =       "Michel Ledoux",
+  publisher =    "American Mathematical Society",
+  year =         "2001",
+  series =       "Mathematical Surveys and Monographs 89",
+  URL =          "https://www.ams.org/books/surv/089/",
+}
+
+@Book{atkinson2009,
+  title =        "Theoretical Numerical Analysis: A Functional Analysis
+                 Framework",
+  author =       "Kendall Atkinson and Weimin Han",
+  year =         "2009",
+  series =       "Texts in Applied Mathematics",
+  publisher =    "Springer",
+  URL =          "https://link.springer.com/book/10.1007/978-1-4419-0458-4",
+}
+
+@Book{spivak1990,
+  title =        "The joy of {TEX}: a gourmet guide to typesetting with
+                 the {AMS-TEX} macro package",
+  author =       "Michael Spivak",
+  publisher =    "American Mathematical Society",
+  year =         "1990",
+  edition =      "2nd ed",
+}
+
+@Book{vanhandel2016,
+  title =        "Probability in High Dimension",
+  author =       "Ramon van Handel",
+  year =         "2016",
+}
